Refactorización: Agrupción der parámetros en RoomParametes y generación de constantes para evitar duplicidad de codigo